--- a/index.html
+++ b/index.html
@@ -9,39 +9,41 @@
 </head>
 
 <body>
-    <div class="container">
-        <section class="menu">
-            <h2>Би и Бо</h2>
-            <div>меню</div>
-        </section>
+    <div class="intro-bg">
+        <div class="container">
+            <section class="menu">
+                <h2 class="company-title">Би и Бо</h2>
+                <div>меню</div>
+            </section>
 
-        <header>
-            <h1>Фулфилмент</h1>
-            <h2>в Москве</h2>
-            <!-- <nav>
-                <ul>
-                    <li><a href="#">Ссылка 1</a></li>
-                    <li><a href="#">Ссылка 2</a></li>
-                    <li><a href="#">Ссылка 3</a></li>
-                </ul>
-            </nav> -->
-        </header>
+            <header class="header">
+                <h1>Фулфилмент</h1>
+                <h2>в Москве</h2>
+            </header>
+        </div>
+    </div>
 
-        <section class="prices">
-            <h2>Прайс-лист</h2>
-            <p>стрелка вниз</p>
-        </section>
+    <section class="prices">
+        <div class="container">
+            <h2 class="prices-header">Прайс-лист</h2>
+            <!-- <p>стрелка вниз</p>-->
+            <div class="prices-triangle"></div>
+        </div>
+    </section>
 
-        <section class="services">
+    <section class="services">
+        <div class="container">
             <h2>Услуги</h2>
             <p>Приемка товара</p>
             <p>Хранение</p>
             <p>Проверка товара</p>
             <p>Упаковка</p>
             <p>Отгрузка</p>
-        </section>
+        </div>
+    </section>
 
-        <section class="feedback">
+    <section class="feedback">
+        <div class="container">
             <h2>Отзывы</h2>
             <p>Отзыв 1</p>
             <p>Отзыв 2</p>
@@ -49,29 +51,34 @@
 
             <form action="#" method="POST">
                 <div>
-                  <label for="feedback">Оставьте свой отзыв</label>
-                  <br>
-                  <input name="feedback" id="say" value="Имя" />
-                  <br>
-                  <input name="feedback_text" id="say" value="Отзыв" />
+                    <label for="feedback">Оставьте свой отзыв</label>
+                    <br>
+                    <input name="feedback" id="say" value="Имя" />
+                    <br>
+                    <input name="feedback_text" id="say" value="Отзыв" />
                 </div>
                 <div>
-                  <button>Отправить</button>
+                    <button>Отправить</button>
                 </div>
-              </form>
-        </section>
+            </form>
+        </div>
 
-        <section class="contacts">
+    </section>
+
+    <section class="contacts">
+        <div class="container">
             <h2>Контакты</h2>
             <p>Контакт 1</p>
             <p>Контакт 2</p>
             <p>Контакт 3</p>
-        </section>
+        </div>
+    </section>
 
-        <footer>
+    <footer>
+        <div class="container">
             <p>&copy; 2024 Би и Бо</p>
-        </footer>
-    </div>
+        </div>
+    </footer>
 </body>
 
 </html>
