--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="./styles/slider.css">
     <title>fulfilment</title>
 </head>
 
@@ -20,7 +21,7 @@
                             <div class="main-menu-bar1"></div>
                             <div class="main-menu-bar2"></div>
                             <div class="main-menu-bar3"></div>
-                          </div>
+                        </div>
                     </div>
                     <nav class="main-menu-wrapper hidden">
                         <ul class="main-menu">
@@ -67,9 +68,79 @@
         <a name="feedback"></a>
         <div class="container">
             <h2>Отзывы</h2>
-            <p>Отзыв 1</p>
-            <p>Отзыв 2</p>
-            <p>Отзыв 3</p>
+
+            <div class="slider">
+                <div class="slide slide--1">
+                    <div class="testimonial">
+                        <h5 class="testimonial__header">Best financial decision ever!</h5>
+                        <blockquote class="testimonial__text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Accusantium quas quisquam non? Quas voluptate nulla minima
+                            deleniti optio ullam nesciunt, numquam corporis et asperiores
+                            laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+                            id alias reiciendis, perferendis facere pariatur dolore veniam
+                            autem esse non voluptatem saepe provident nihil molestiae.
+                        </blockquote>
+                        <address class="testimonial__author">
+                            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
+                                alt="" class="testimonial__photo" />
+                            <h6 class="testimonial__name">Aarav Lynn</h6>
+                            <p class="testimonial__location">San Francisco, USA</p>
+                        </address>
+                    </div>
+                </div>
+
+                <div class="slide slide--2">
+                    <div class="testimonial">
+                        <h5 class="testimonial__header">
+                            The last step to becoming a complete minimalist
+                        </h5>
+                        <blockquote class="testimonial__text">
+                            Quisquam itaque deserunt ullam, quia ea repellendus provident,
+                            ducimus neque ipsam modi voluptatibus doloremque, corrupti
+                            laborum. Incidunt numquam perferendis veritatis neque repellendus.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+                            deserunt exercitationem deleniti.
+                        </blockquote>
+                        <address class="testimonial__author">
+                            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
+                                alt="" class="testimonial__photo" />
+                            <h6 class="testimonial__name">Miyah Miles</h6>
+                            <p class="testimonial__location">London, UK</p>
+                        </address>
+                    </div>
+                </div>
+
+                <div class="slide slide--3">
+                    <div class="testimonial">
+                        <h5 class="testimonial__header">
+                            Finally free from old-school banks
+                        </h5>
+                        <blockquote class="testimonial__text">
+                            Debitis, nihil sit minus suscipit magni aperiam vel tenetur
+                            incidunt commodi architecto numquam omnis nulla autem,
+                            necessitatibus blanditiis modi similique quidem. Odio aliquam
+                            culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
+                            deleniti saepe aliquid quos inventore sequi. Necessitatibus id
+                            alias reiciendis, perferendis facere.
+                        </blockquote>
+                        <address class="testimonial__author">
+                            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
+                                alt="" class="testimonial__photo" />
+                            <h6 class="testimonial__name">Francisco Gomes</h6>
+                            <p class="testimonial__location">Lisbon, Portugal</p>
+                        </address>
+                    </div>
+                </div>
+
+                <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
+                  <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
+                  <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
+                  <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+                <button class="slider__btn slider__btn--left">&larr;</button>
+                <button class="slider__btn slider__btn--right">&rarr;</button>
+                <div class="dots"></div>
+            </div>
 
             <form action="#" method="POST">
                 <div>
@@ -102,7 +173,8 @@
             <p>&copy; 2024 Би и Бо</p>
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/slider.js"></script>
 </body>
 
 </html>
